Added JS Functionality for Icons

--- a/pr.html
+++ b/pr.html
@@ -65,17 +65,17 @@
             <div class="iconPosition">
                 <div class="iconContainer">
                     <div class="backScale"></div>
-                    <div class="icon ">
+                    <div class="icon">
                         <i class="fas fa-angle-right arrowRight" id="arrowRight"></i>
                         <i class="fas fa-times close " id="close"></i>
                     </div>
                 </div>
             </div>
-            <img src="img/NewsFeed.png" alt="News Feed Grid Layout" class="prjctImg activeImg">
-            <img src="img/ResponsiveTab.png" alt="Responsive Tab Menu" class="prjctImg">
-            <img src="img/PureJSUtilities.png" alt="Pure JS Utilities" class="prjctImg">
+            <img src="img/NewsFeed.png" alt="News Feed Grid Layout" class="prjctImg fit activeImg">
+            <img src="img/ResponsiveTabb.png" alt="Responsive Tab Menu" class="prjctImg">
+            <img src="img/PureJSUtilities.png" alt="Pure JS Utilities" class="prjctImg fit">
             <img src="img/SolarSystem.png" alt="Solar System" class="prjctImg">
-            <img src="img/GitHubDataExtraction.png" alt="GitHub Data Extraction" class="prjctImg">
+            <img src="img/GitHubDataExtractionn.png" alt="GitHub Data Extraction" class="prjctImg">
         </div>
     </div>
     <script src="pr.js"></script>
