--- a/pr.html
+++ b/pr.html
@@ -5,19 +5,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="pr.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="work">
         <div class="title">
             <div class="main_content">
-                <img src="img/bird.png" alt="Bird" class="avat">
-                <h1 class="name">News Feed Tiles</h1>
-                <p class="type">UI/Responsive</p>
-                <i class="fas fa-file-code codeIcon"></i>
-                <span class="code">Pure CSS</span>
+                <img src="img/bird.png" alt="Bird" class="avatar">
+                <div class="workName" id="workName">
+                    <ul class="titleContainer" id="titleContainer">
+                        <li class="workTitle">
+                            <p>News Feed Tiles</p>
+                        </li>
+                        <li class="workTitle">
+                            <p>Responsive Tab Menu</p>
+                        </li>
+                        <li class="workTitle">
+                            <p>Pure Javascript Utilities</p>
+                        </li>
+                        <li class="workTitle">
+                            <p>Solar System</p>
+                        </li>
+                        <li class="workTitle">
+                            <p>Fetching Github User Data</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="workType" id="workType">
+                    <ul class="typeContainer" id="typeContainer">
+                        <li class="type">
+                            <p>UI/Responsive 0</p>
+                        </li>
+                        <li class="type">
+                            <p>UI/Responsive 1</p>
+                        </li>
+                        <li class="type">
+                            <p>UI/Responsive 2</p>
+                        </li>
+                        <li class="type">
+                            <p>UI/Responsive 3</p>
+                        </li>
+                        <li class="type">
+                            <p>UI/Responsive 4</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="workCode" id="workCode">
+                    <div class="codeContainer" id="codeContainer">
+                        <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS 0</span>
+                        <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS 1</span>
+                        <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS 2</span>
+                        <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS 3</span>
+                        <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS 4</span>
+                    </div>
+                </div>
             </div>
             <div class="footer">
                 <h4>About/Contact</h4>
@@ -45,19 +90,6 @@
                     <li class="mark"></li>
                     <li class="mark"></li>
                     <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
-                    <li class="mark"></li>
                 </ul>
             </div>
         </div>
@@ -65,19 +97,22 @@
             <div class="iconPosition">
                 <div class="iconContainer">
                     <div class="backScale"></div>
-                    <div class="icon">
+                    <div class="icon" id="icon">
                         <i class="fas fa-angle-right arrowRight" id="arrowRight"></i>
                         <i class="fas fa-times close " id="close"></i>
                     </div>
                 </div>
             </div>
-            <img src="img/NewsFeed.png" alt="News Feed Grid Layout" class="prjctImg fit activeImg">
-            <img src="img/ResponsiveTabb.png" alt="Responsive Tab Menu" class="prjctImg">
-            <img src="img/PureJSUtilities.png" alt="Pure JS Utilities" class="prjctImg fit">
-            <img src="img/SolarSystem.png" alt="Solar System" class="prjctImg">
-            <img src="img/GitHubDataExtractionn.png" alt="GitHub Data Extraction" class="prjctImg">
+            <div class="imgContainer" id="imgContainer">
+                <img src="img/NewsFeed.png" alt="News Feed Grid Layout" class="prjctImg">
+                <img src="img/ResponsiveTabb.png" alt="Responsive Tab Menu" class="prjctImg">
+                <img src="img/PureJSUtilities.png" alt="Pure JS Utilities" class="prjctImg">
+                <img src="img/SolarSystem.png" alt="Solar System" class="prjctImg">
+                <img src="img/GitHubDataExtractionn.png" alt="GitHub Data Extraction" class="prjctImg">
+            </div>
         </div>
     </div>
     <script src="pr.js"></script>
 </body>
+
 </html>
