Completed till work main page and added About content.

--- a/pr.html
+++ b/pr.html
@@ -12,10 +12,43 @@
 </head>
 
 <body>
-    <div class="work">
-        <div class="title">
+    <div class="wrap" id="wrap">
+    <div class="aboutContact" id="aboutContact">
+        <div class="about">
+            <p> I'm a web developer based in Ghaziabad, India. I have a passion for web development and love to develop
+                applications
+                for Dekstop, mobile & other Smart devices. I know how to create a website to run across devices using the
+                latest technologies available.<br>
+                I am currently looking for jobs in Web Development . Sooo... Reach me if you have any work for me, or in
+                case you just
+                wanna say Hi.!!</p>
+            <p class="email">
+                prerna.2012@gmail.com
+            </p>
+        </div>
+        <div class="contact">
+            <ul class="socialContainer">
+                <li class="social">
+                    <p>Instagram</p>
+                </li>
+                <li class="social">
+                    <p>Facebook</p>
+                </li>
+                <li class="social">
+                    <p>GitHub</p>
+                </li>
+                <li class="social">
+                    <p>LinkedIn</p>
+                </li>
+            </ul>
+        </div>    
+    </div>
+    <div class="work" id="work">
+       
+        <div class="home">
             <div class="main_content">
                 <img src="img/bird.png" alt="Bird" class="avatar">
+                <div class="workInfo" id="workInfo">   
                 <div class="workName" id="workName">
                     <ul class="titleContainer" id="titleContainer">
                         <li class="workTitle">
@@ -63,8 +96,9 @@
                         <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS 4</span>
                     </div>
                 </div>
+                </div>
             </div>
-            <div class="footer">
+            <div class="footer" id="footer">
                 <h4>About/Contact</h4>
             </div>
         </div>
@@ -111,6 +145,8 @@
                 <img src="img/GitHubDataExtractionn.png" alt="GitHub Data Extraction" class="prjctImg">
             </div>
         </div>
+        
+    </div>
     </div>
     <script src="pr.js"></script>
 </body>
