--- a/index.html
+++ b/index.html
@@ -11,18 +11,118 @@
 </head>
 <body>
     <div class="wrapper">
-        <div id="overlay">
+        <div id="prgContainer" class="prgContainer">
             <span class="progress"></span>
-            <span id="counter"> </span>
-
+            <span id="counter" class="counter"> </span>
         </div>
-        <div class="intro">
+        <div class="intro" id="intro">
             <h1 class="hello">Hello Guys !</h1>
             <p class="name">I am Prerna Chauhan.<br> I am a Web Developer.<br>
            Click below to view some of my works. </p>
            <i class="fas fa-angle-double-down down"></i>
-           <i class="fas fa-laptop-code work"></i>
+           <i class="fas fa-laptop-code workIcon" id="workIcon"></i>
         </div>
+        <div class="work" id="work">
+            <div class="title">
+                <div class="main_content">
+                    <img src="img/bird.png" alt="Bird" class="avatar">
+                    <div class="workName" id="workName">
+                        <ul class="titleContainer" id="titleContainer">
+                            <li class="workTitle">
+                                <p>News Feed Tiles</p>
+                            </li>
+                            <li class="workTitle">
+                                <p>Responsive Tab Menu</p>
+                            </li>
+                            <li class="workTitle">
+                                <p>Pure Javascript Utilities</p>
+                            </li>
+                            <li class="workTitle">
+                                <p>Solar System</p>
+                            </li>
+                            <li class="workTitle">
+                                <p>Fetching Github User Data</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="workType" id="workType">
+                        <ul class="typeContainer" id="typeContainer">
+                            <li class="type">
+                                <p>UI/Responsive</p>
+                            </li>
+                            <li class="type">
+                                <p>UI / Vanilla JS / Responsive</p>
+                            </li>
+                            <li class="type">
+                                <p>Vanilla JavaScript</p>
+                            </li>
+                            <li class="type">
+                                <p>UI Development</p>
+                            </li>
+                            <li class="type">
+                                <p>JS API CALL</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="workCode" id="workCode">
+                        <div class="codeContainer" id="codeContainer">
+                            <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS</span>
+                            <span class="code"><i class="fas fa-file-code codeIcon"></i>CSS + JavaScript</span>
+                            <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure JavaScript</span>
+                            <span class="code"><i class="fas fa-file-code codeIcon"></i>Pure CSS</span>
+                            <span class="code"><i class="fas fa-file-code codeIcon"></i>CSS + JavaScript</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer">
+                    <h4>About/Contact</h4>
+                </div>
+            </div>
+            <div class="middle">
+                <div class="index">
+                    <i class="fas fa-hand-point-up arrowUp" id="arrowUp"></i>
+                    <ul class="contents">
+                        <li class="work_list">News Feed Tiles</li>
+                        <li class="work_list">Responsive Tab Menu</li>
+                        <li class="work_list">Pure Javascript Utilities</li>
+                        <li class="work_list">Solar System</li>
+                        <li class="work_list">Fetching Github User Data</li>
+                    </ul>
+                    <i class="fas fa-hand-point-down arrowDown" id="arrowDown"></i>
+                </div>
+                <div class="track">
+                    <div class="scroll" id="scroll"></div>
+                    <ul class="bench">
+                        <li class="mark"></li>
+                        <li class="mark"></li>
+                        <li class="mark"></li>
+                        <li class="mark"></li>
+                        <li class="mark"></li>
+                        <li class="mark"></li>
+                        <li class="mark"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="screen">
+                <div class="iconPosition">
+                    <div class="iconContainer">
+                        <div class="backScale"></div>
+                        <div class="icon" id="icon">
+                            <i class="fas fa-angle-right arrowRight" id="arrowRight"></i>
+                            <i class="fas fa-times close " id="close"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="imgContainer" id="imgContainer">
+                    <img src="img/NewsFeed.png" alt="News Feed Grid Layout" class="prjctImg">
+                    <img src="img/ResponsiveTabb.png" alt="Responsive Tab Menu" class="prjctImg">
+                    <img src="img/PureJSUtilities.png" alt="Pure JS Utilities" class="prjctImg">
+                    <img src="img/SolarSystem.png" alt="Solar System" class="prjctImg">
+                    <img src="img/GitHubDataExtractionn.png" alt="GitHub Data Extraction" class="prjctImg">
+                </div>
+            </div>
+        </div>
+
         
         
 
